fix(ui): fix grid layout and footer positioning on mobile and desktop

--- a/greendzine-assignment/src/styles/Dashboard.css
+++ b/greendzine-assignment/src/styles/Dashboard.css
@@ -5,6 +5,7 @@
   gap: 2rem;
   padding: 1rem;
   width: 100vw;
+  overflow: scroll;
 }
 
 .charts-inventory-container,
@@ -60,7 +61,6 @@
     grid-template-rows: auto;
     gap: 1rem;
     padding: 0.5rem;
-    min-height: 100vh;
   }
 
   .charts-inventory-container,
